--- a/client/src/app/view-events/view-events.component.scss
+++ b/client/src/app/view-events/view-events.component.scss
@@ -155,6 +155,7 @@ h1 {
 }
 
 .custom-modal-dialog {
+  min-width: 600px;
   position: relative;
   z-index: 10000;
   animation: slideUp 0.3s ease-out;
