--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -9,6 +9,10 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+a {
+  text-decoration: none;
+}
+
 .navbar-container {
   display: flex;
   align-items: center;
