--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -179,14 +179,14 @@ a {
     padding: 0.5rem 0;
     gap: 0.4rem;
     
-    &::-webkit-scrollbar {
-      height: 4px;
-    }
+    // &::-webkit-scrollbar {
+    //   height: 4px;
+    // }
     
-    &::-webkit-scrollbar-thumb {
-      background: rgba(255, 255, 255, 0.3);
-      border-radius: 2px;
-    }
+    // &::-webkit-scrollbar-thumb {
+    //   background: rgba(255, 255, 255, 0.3);
+    //   border-radius: 2px;
+    // }
   }
   
   .navbar-actions {
