--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -50,10 +50,13 @@
                 'is-invalid': itemForm.get('username')?.invalid && itemForm.get('username')?.touched,
                 'is-valid': itemForm.get('username')?.valid && itemForm.get('username')?.touched
               }">
-            <small *ngIf="itemForm.get('username')?.hasError('required') && itemForm.get('username')?.touched"
-              class="error-text">
-              <i class="bi bi-exclamation-circle"></i> Username is required
-            </small>
+              <div class="password-requirements" *ngIf="showUsernameRequirements && itemForm.get('username')?.touched">
+                <ul>
+                  <li *ngFor="let rule of usernameRules" [class.satisfied]="rule.satisfied" [hidden]="rule.satisfied">
+                    <small>{{ rule.label }}</small>
+                  </li>
+                </ul>
+              </div>
           </div>
 
           <div class="form-group">
@@ -68,10 +71,13 @@
                 'is-invalid': itemForm.get('password')?.invalid && itemForm.get('password')?.touched,
                 'is-valid': itemForm.get('password')?.valid && itemForm.get('password')?.touched
               }">
-            <small *ngIf="itemForm.get('password')?.hasError('required') && itemForm.get('password')?.touched"
-              class="error-text">
-              <i class="bi bi-exclamation-circle"></i> Password is required
-            </small>
+              <div class="password-requirements" *ngIf="showPasswordRequirements && itemForm.get('password')?.touched">
+                <ul>
+                  <li *ngFor="let rule of passwordRules" [class.satisfied]="rule.satisfied" [hidden]="rule.satisfied">
+                    <small>{{ rule.label }}</small>
+                  </li>
+                </ul>
+              </div>
           </div>
 
           <button 
