name for register

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="navbar-container">
     <div class="navbar-brand">
       <span class="brand-icon">🎉</span>
-      <a class="brand-text" [routerLink]="['/dashboard']" routerLinkActive="router-link-active" >EventOO.io</a>
+      <a class="brand-text" [routerLink]="['/dashboard']" routerLinkActive="router-link-active" >event.io</a>
     </div>
 
     <div class="navbar-menu">
