--- a/client/src/app/landing/landing.component.html
+++ b/client/src/app/landing/landing.component.html
@@ -21,7 +21,7 @@
     <nav class="navbar-brand">
       <div class="nav-brand" >
         <span class="brand-icon">🎉</span>
-        <span class="brand-text">EventOO.io</span>        
+        <span class="brand-text">Event.io</span>        
       </div>
     </nav>
 
