--- a/client/src/app/landing/landing.component.scss
+++ b/client/src/app/landing/landing.component.scss
@@ -312,9 +312,10 @@
   .hero-title {
     margin-bottom: 2rem;
 
-    h1 {
-      font-size: 4.5rem;
+    .something {
+      font-size: 2.4rem;
       font-weight: 900;
+      color: aliceblue;
       font-family: sans-serif;
       line-height: 1.2;
       margin-bottom: 0.5rem;
